--- a/package/switch-coreboot/nerves_nintendo_switch_defconfig
+++ b/package/switch-coreboot/nerves_nintendo_switch_defconfig
@@ -4,7 +4,7 @@ CONFIG_VENDOR_NINTENDO=y
 # CONFIG_POST_DEVICE is not set
 CONFIG_COREBOOT_ROMSIZE_KB_1024=y
 CONFIG_CONSOLE_SERIAL_TEGRA210_UARTB=y
-CONFIG_HAVE_MTC=n
+CONFIG_HAVE_MTC=y
 # CONFIG_MTC_FILE=${BINARIES_DIR}/tegra_mtc.bin
 CONFIG_HAVE_MTC_TABLES=y
 CONFIG_MTC_TABLES_DIRECTORY="${BINARIES_DIR}/images/mtc_tables/"
