Update switch coreboot config

--- a/package/switch-coreboot/nerves_nintendo_switch_defconfig
+++ b/package/switch-coreboot/nerves_nintendo_switch_defconfig
@@ -5,7 +5,7 @@ CONFIG_VENDOR_NINTENDO=y
 CONFIG_COREBOOT_ROMSIZE_KB_1024=y
 CONFIG_CONSOLE_SERIAL_TEGRA210_UARTB=y
 CONFIG_HAVE_MTC=y
-# CONFIG_MTC_FILE=${BINARIES_DIR}/tegra_mtc.bin
+CONFIG_MTC_FILE=${BINARIES_DIR}/tegra_mtc.bin
 CONFIG_HAVE_MTC_TABLES=y
 CONFIG_MTC_TABLES_DIRECTORY="${BINARIES_DIR}/images/mtc_tables/"
 CONFIG_DEFAULT_CONSOLE_LOGLEVEL_6=y
