--- a/package/switch-coreboot/nerves_nintendo_switch_defconfig
+++ b/package/switch-coreboot/nerves_nintendo_switch_defconfig
@@ -10,4 +10,4 @@ CONFIG_HAVE_MTC_TABLES=y
 CONFIG_MTC_TABLES_DIRECTORY="${BINARIES_DIR}/images/mtc_tables/"
 CONFIG_DEFAULT_CONSOLE_LOGLEVEL_6=y
 CONFIG_PAYLOAD_ELF=y
-CONFIG_PAYLOAD_FILE="${BINARIES_DIR}/u-boot"
+CONFIG_PAYLOAD_FILE="${BINARIES_DIR}/u-boot.elf"
