--- a/configs/switch.conf
+++ b/configs/switch.conf
@@ -1,5 +1,5 @@
 switch
 hid,1024,0x80000000,0x80000000,2G
-Image:load 0x83000000
+Image.gz:load 0x83000000
 tegra210-nintendo-switch.dtb:load 0x8d000000
 switch.scr.img:load 0x8e000000,jump 0x8e000000
