--- a/rootfs_overlay/etc/erlinit.config
+++ b/rootfs_overlay/etc/erlinit.config
@@ -5,7 +5,7 @@
 
 # Specify where erlinit should send the IEx prompt. Only one may be enabled at
 # a time.
--c ttyS0
+-c tty0
 
 # If more than one tty are available, always warn if the user is looking at the
 # wrong one.
@@ -25,7 +25,7 @@
 
 # Uncomment to hang the board rather than rebooting when Erlang exits
 # NOTE: Do not enable on production boards
-#--hang-on-exit
+--hang-on-exit
 
 # Change the graceful shutdown time. If 10 seconds isn't long enough between
 # calling "poweroff", "reboot", or "halt" and :init.stop/0 stopping all OTP
@@ -33,7 +33,7 @@
 #--graceful-shutdown-timeout 15000
 
 # Optionally run a program if the Erlang VM exits
-#--run-on-exit /bin/sh
+--run-on-exit /bin/sh
 
 # Enable UTF-8 filename handling in Erlang and custom inet configuration
 -e LANG=en_US.UTF-8;LANGUAGE=en;ERL_INETRC=/etc/erl_inetrc;ERL_CRASH_DUMP=/root/crash.dump
@@ -46,7 +46,7 @@
 #       nerves_runtime will auto-format it. Your applications will need to handle
 #       initializing any expected files and folders.
 -m /dev/mmcblk0p1:/horizon_data:vfat:ro,nodev,noexec,nosuid:
--m /dev/mmcblk0p2:/root:ext4:nodev:
+-m /dev/mmcblk0p3:/root:ext4:nodev:
 
 # Erlang release search path
 -r /srv/erlang
